--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -198,7 +198,7 @@ binderhub:
 
 
   imageCleaner:
-    enables: false
+    enabled: false
     # enabled: true
     # host:
     #   enabled: false
