--- a/gesishub/gesishub/values.yaml
+++ b/gesishub/gesishub/values.yaml
@@ -52,7 +52,7 @@ persistent_binderhub:
           - ^(git|https?)%3A%2F%2Fcodeberg.org%2Fforgiagether%2F.*
 
       BinderHub:
-        build_image: quay.io/jupyterhub/repo2docker:2022.10.0-89.g49162fc
+        build_image: quay.io/jupyterhub/repo2docker:2022.10.0-128.g4c6b5bc
         build_node_selector:
           user: worker
         per_repo_quota: 100
