--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -78,7 +78,7 @@ binderhub:
       pod_quota: 120
       base_url: /binder/
       use_registry: true
-      build_image: quay.io/jupyterhub/repo2docker:2022.10.0-128.g4c6b5bc
+      build_image: quay.io/jupyterhub/repo2docker:2022.10.0-148.g43ff7bb
       build_node_selector:
         userbuild: worker
         # user: worker
