--- a/gesisbinder/gesisbinder/requirements.yaml
+++ b/gesisbinder/gesisbinder/requirements.yaml
@@ -1,4 +1,4 @@
 dependencies:
  - name: binderhub
-   version: 1.0.0-0.dev.git.2874.h2811d52
+   version: 1.0.0-0.dev.git.3035.h32213a4
    repository: https://jupyterhub.github.io/helm-chart
