Update helm chart configuration

--- a/gesisbinder/gesisbinder/values.yaml
+++ b/gesisbinder/gesisbinder/values.yaml
@@ -185,17 +185,7 @@ binderhub:
   service:
     type: NodePort
 
-  dind:
-    enabled: false
-    # enabled: true
-    # resources:
-    #   requests:
-    #     cpu: "0.5"
-    #     memory: 1Gi
-    #   limits:
-    #     cpu: "8"
-    #     memory: 8Gi
-
+  imageBuilderType: dind
 
   imageCleaner:
     enabled: false
